bypass OpenSSL self finding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,12 +126,12 @@ endif()
 
 if(WITH_OPENSSL)
     add_definitions(-DWITH_OPENSSL)
-    find_package(OpenSSL)
-    if(OpenSSL_FOUND)
-        set(LIBS ${LIBS} OpenSSL::SSL OpenSSL::Crypto)
-    else()
-        set(LIBS ${LIBS} ssl crypto)
-    endif()
+#    find_package(OpenSSL)
+#    if(OpenSSL_FOUND)
+#        set(LIBS ${LIBS} OpenSSL::SSL OpenSSL::Crypto)
+#    else()
+#        set(LIBS ${LIBS} ssl crypto)
+#    endif()
 endif()
 
 if(WITH_GNUTLS)
